@@ -1,14 +1,15 @@
 package de.sventorben.keycloak.authentication.hidpd;
 
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.core.Response;
 import org.keycloak.authentication.AuthenticationFlowContext;
 import org.keycloak.forms.login.LoginFormsProvider;
 import org.keycloak.forms.login.freemarker.model.IdentityProviderBean;
 import org.keycloak.models.IdentityProviderModel;
 
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.core.Response;
 import java.net.URI;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 final class LoginForm {
@@ -21,22 +22,44 @@ final class LoginForm {
         this.loginFormsProvider = loginFormsProvider;
     }
 
+    Response createWithSignInButtonOnly(MultivaluedMap<String, String> formData) {
+        LoginFormsProvider form = createForm(formData);
+        form.setAttribute(LoginFormsProvider.USERNAME_HIDDEN, "true");
+        form.setAttribute(LoginFormsProvider.REGISTRATION_DISABLED, "true");
+        return form.createLoginUsername();
+    }
 
     Response create(MultivaluedMap<String, String> formData) {
+        LoginFormsProvider forms = createForm(formData);
+        return forms.createLoginUsername();
+    }
+
+    private LoginFormsProvider createForm(MultivaluedMap<String, String> formData) {
         LoginFormsProvider forms = context.form();
         if (!formData.isEmpty()) {
             forms.setFormData(formData);
         }
-        return forms.createLoginUsername();
+        return forms;
     }
 
     Response create(List<IdentityProviderModel> idps) {
         URI baseUriWithCodeAndClientId = loginFormsProvider.getBaseUriWithCodeAndClientId();
         LoginFormsProvider forms = context.form();
-        forms.setAttribute("hidpd", new IdentityProviderBean(context.getRealm(),
+        forms.setAttribute("hidpd", new IdentityProviderBean(
             context.getSession(),
-            idps.stream().map(AlwaysSelectableIdentityProviderModel::new).collect(Collectors.toList()),
-            baseUriWithCodeAndClientId));
+            context.getRealm(),
+            baseUriWithCodeAndClientId,
+            context
+            ) {
+                @Override
+                public List<IdentityProvider> getProviders() {
+                    return idps.stream()
+                        .map(AlwaysSelectableIdentityProviderModel::new)
+                        .map(idp -> createIdentityProvider(this.realm, this.baseURI, idp))
+                        .toList();
+                }
+            }
+        );
         return forms.createForm("hidpd-select-idp.ftl");
     }
 }
